--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 
 <body>
     <header class="header">
-        <div class="container header__menu">
-            <a href="/" class="header__menu--logo">
+        <div class="container menu">
+            <a href="/" class="menu__logo">
                 <img src="images/logo.svg" alt="Easybank">
             </a>
-            <nav class="header__menu--link m-hide">
-               <a href="/">Home</a> 
-               <a href="/">About</a> 
-               <a href="/">Content</a> 
-               <a href="/">Blog</a> 
-               <a href="/">Careers</a> 
+            <nav class="menu__link m-hide">
+                <a href="/">Home</a>
+                <a href="/">About</a>
+                <a href="/">Content</a>
+                <a href="/">Blog</a>
+                <a href="/">Careers</a>
             </nav>
             <a href="#" class="button m-hide">Request Invite</a>
-            <div class="header__menu--buger d-hide">
+            <div class="menu__buger d-hide">
                 <span></span>
                 <span></span>
                 <span></span>
@@ -35,16 +35,69 @@
         <div class="container">
             <div class="hero__text">
                 <h2>Next generation digital banking!!!!</h2>
-                <p> 
+                <p>
                     Take your financial life online. Your Easybank account will be a
                     one-stop-shop for spending, saving, budgeting, investing, and much
                     more.
                 </p>
                 <a class="button" href="#">Request Invite</a>
             </div>
-    
+
             <div class="hero__image">
                 <img src="./images/image-mockups.png" alt="banking">
+            </div>
+        </div>
+    </section>
+
+    <section class="feature">
+        <div class="container">
+            <div class="feature__heading">
+                <h2>Why choose Easybank?</h2>
+                <p> We leverage Open Banking to turn your bank account into your financial hub. Control
+                    your finances like never before.
+                </p>
+            </div>
+            <div class="feature__list">
+                <div class="fearure__item">
+                    <div class="feature__icon">
+                        <img src="/images/icon-online.svg" />
+                    </div>
+                    <div class="feature__title"> Online Banking</div>
+                    <p class="feature__description">
+                        Our modern web and mobile applications allow you to keep track of your finances
+                        wherever you are in the world.
+                    </p>
+                </div>
+                <div class="fearure__item">
+                    <div class="feature__icon">
+                        <img src="/images/icon-online.svg" />
+                    </div>
+                    <div class="feature__title">Simple Budgeting</div>
+                    <p class="feature__description">
+                        See exactly where your money goes each month. Receive
+                        notifications when you’re close to hitting your limits.
+                    </p>
+                </div>
+                <div class="fearure__item">
+                    <div class="feature__icon">
+                        <img src="/images/icon-online.svg" />
+                    </div>
+                    <div class="feature__title"> Fast Onboarding</div>
+                    <p class="feature__description">
+                        We don’t do branches. Open your account in minutes online and start taking control
+                        of your finances right away.
+                    </p>
+                </div>
+                <div class="fearure__item">
+                    <div class="feature__icon">
+                        <img src="/images/icon-online.svg" />
+                    </div>
+                    <div class="feature__title"> Open API</div>
+                    <p class="feature__description">
+                        Manage your savings, investments, pension, and much more from one account. Tracking
+                        your money has never been easier.
+                    </p>
+                </div>
             </div>
         </div>
     </section>
