--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
     <section class="hero">
         <div class="container">
             <div class="hero__text">
-                <h2>Next generation digital banking!!!!</h2>
-                <p>
+                <h2 class="text-5xl">Next generation digital banking!!!!</h2>
+                <p class="text-lg">
                     Take your financial life online. Your Easybank account will be a
                     one-stop-shop for spending, saving, budgeting, investing, and much
                     more.
                 </p>
-                <a class="button" href="#">Request Invite</a>
+                <a class="button text-base" href="#">Request Invite</a>
             </div>
 
             <div class="hero__image">
@@ -52,18 +52,17 @@
     <section class="feature">
         <div class="container">
             <div class="feature__heading">
-                <h2>Why choose Easybank?</h2>
-                <p> We leverage Open Banking to turn your bank account into your financial hub. Control
-                    your finances like never before.
-                </p>
+                <h2 class="text-4xl">Why choose Easybank?</h2>
+                <p class="text-lg"> We leverage Open Banking to turn your bank account into your financial hub. </p>
+                <p class="text-lg">Controlyour finances like never before.</p>
             </div>
             <div class="feature__list">
                 <div class="fearure__item">
                     <div class="feature__icon">
                         <img src="/images/icon-online.svg" />
                     </div>
-                    <div class="feature__title"> Online Banking</div>
-                    <p class="feature__description">
+                    <div class="feature__title text-2xl"> Online Banking</div>
+                    <p class="feature__description text-sm">
                         Our modern web and mobile applications allow you to keep track of your finances
                         wherever you are in the world.
                     </p>
@@ -72,8 +71,8 @@
                     <div class="feature__icon">
                         <img src="/images/icon-online.svg" />
                     </div>
-                    <div class="feature__title">Simple Budgeting</div>
-                    <p class="feature__description">
+                    <div class="feature__title text-2xl"> Simple Budgeting</div>
+                     <p class="feature__description text-sm">
                         See exactly where your money goes each month. Receive
                         notifications when you’re close to hitting your limits.
                     </p>
@@ -82,8 +81,8 @@
                     <div class="feature__icon">
                         <img src="/images/icon-online.svg" />
                     </div>
-                    <div class="feature__title"> Fast Onboarding</div>
-                    <p class="feature__description">
+                    <div class="feature__title text-2xl"> Fast Onboarding</div>
+                     <p class="feature__description text-sm">
                         We don’t do branches. Open your account in minutes online and start taking control
                         of your finances right away.
                     </p>
@@ -92,8 +91,8 @@
                     <div class="feature__icon">
                         <img src="/images/icon-online.svg" />
                     </div>
-                    <div class="feature__title"> Open API</div>
-                    <p class="feature__description">
+                    <div class="feature__title text-2xl"> Open API</div>
+                     <p class="feature__description text-sm">
                         Manage your savings, investments, pension, and much more from one account. Tracking
                         your money has never been easier.
                     </p>
@@ -102,10 +101,82 @@
         </div>
     </section>
 
+    <section class="article">
+        <div class="container">
+            <h2 class="text-4xl">Latest Articles</h2>
+            <div class="article__list">
+                <a href="#" class="article__item">
+                    <img class="article__image" src="/images/image-currency.jpg" alt="img">
+                    <div class="article__text">
+                        <div class="article__author text-xs">By Claire Robinson</div>
+                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
+                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
+                            why should you be forced to only receive money in a single …
+                        </p>
+                    </div>
+                </a>
+                <a href="#" class="article__item">
+                    <img class="article__image" src="/images/image-restaurant.jpg" alt="img">
+                    <div class="article__text">
+                        <div class="article__author text-xs">By Claire Robinson</div>
+                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
+                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
+                            why should you be forced to only receive money in a single …
+                        </p>
+                    </div>
+                </a>
+                <a href="#" class="article__item">
+                    <img class="article__image" src="/images/image-plane.jpg" alt="img">
+                    <div class="article__text">
+                        <div class="article__author text-xs">By Claire Robinson</div>
+                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
+                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
+                            why should you be forced to only receive money in a single …
+                        </p>
+                    </div>
+                </a>
+                <a href="#" class="article__item">
+                    <img class="article__image" src="/images/image-confetti.jpg" alt="img">
+                    <div class="article__text">
+                        <div class="article__author text-xs">By Claire Robinson</div>
+                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
+                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
+                            why should you be forced to only receive money in a single …
+                        </p>
+                    </div>
+                </a>
+               
+            </div>
+        </div>
+    </section>
 
-
-
-
+    <footer>
+        <div class="container">
+            <div class="footer__info">
+                <a class="footer__logo" href="#">
+                   <img src="images/logo-dark.svg" alt="logo">
+                 </a>
+         
+                 <div class="footer__social">
+                   <a class="icon" href="#">
+                       <img src="images/icon-facebook.svg" alt="fb">
+                   </a>
+                   <a href="#" class="icon">
+                       <img src="images/icon-youtube.svg" alt="youtube">
+                   </a>
+                   <a href="#" class="icon">
+                       <img src="images/icon-twitter.svg" alt="twitter">
+                   </a >
+                   <a href="#" class="icon">
+                       <img src="images/icon-pinterest.svg" alt="pinterest">
+                   </a>
+                   <a href="#" class="icon">
+                    <img src="images/icon-instagram.svg" alt="pinterest">
+                </a>
+                 </div>
+           </div>
+        </div>
+    </footer>
     <script src="index.js"></script>
 </body>
 
