--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                         <img src="/images/icon-online.svg" />
                     </div>
                     <div class="feature__title text-2xl"> Simple Budgeting</div>
-                     <p class="feature__description text-sm">
+                    <p class="feature__description text-sm">
                         See exactly where your money goes each month. Receive
                         notifications when you’re close to hitting your limits.
                     </p>
@@ -82,7 +82,7 @@
                         <img src="/images/icon-online.svg" />
                     </div>
                     <div class="feature__title text-2xl"> Fast Onboarding</div>
-                     <p class="feature__description text-sm">
+                    <p class="feature__description text-sm">
                         We don’t do branches. Open your account in minutes online and start taking control
                         of your finances right away.
                     </p>
@@ -92,7 +92,7 @@
                         <img src="/images/icon-online.svg" />
                     </div>
                     <div class="feature__title text-2xl"> Open API</div>
-                     <p class="feature__description text-sm">
+                    <p class="feature__description text-sm">
                         Manage your savings, investments, pension, and much more from one account. Tracking
                         your money has never been easier.
                     </p>
@@ -145,36 +145,52 @@
                         </p>
                     </div>
                 </a>
-               
+
             </div>
         </div>
     </section>
 
     <footer>
-        <div class="container">
+        <div class="container footer__wrap">
             <div class="footer__info">
                 <a class="footer__logo" href="#">
-                   <img src="images/logo-dark.svg" alt="logo">
-                 </a>
-         
-                 <div class="footer__social">
-                   <a class="icon" href="#">
-                       <img src="images/icon-facebook.svg" alt="fb">
-                   </a>
-                   <a href="#" class="icon">
-                       <img src="images/icon-youtube.svg" alt="youtube">
-                   </a>
-                   <a href="#" class="icon">
-                       <img src="images/icon-twitter.svg" alt="twitter">
-                   </a >
-                   <a href="#" class="icon">
-                       <img src="images/icon-pinterest.svg" alt="pinterest">
-                   </a>
-                   <a href="#" class="icon">
-                    <img src="images/icon-instagram.svg" alt="pinterest">
+                    <img src="images/logo-dark.svg" alt="logo">
                 </a>
-                 </div>
-           </div>
+
+                <div class="footer__social">
+                    <a class="icon" href="#">
+                        <img src="images/icon-facebook.svg" alt="fb">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="images/icon-youtube.svg" alt="youtube">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="images/icon-twitter.svg" alt="twitter">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="images/icon-pinterest.svg" alt="pinterest">
+                    </a>
+                    <a href="#" class="icon">
+                        <img src="images/icon-instagram.svg" alt="pinterest">
+                    </a>
+                </div>
+            </div>
+            <div class="footer__menu">
+                <div class="footer__link text-sm">
+                    <a href="#">About Us</a>
+                    <a href="#">Contact</a>
+                    <a href="#">Blog</a>
+                </div>
+                <div class="footer__link text-sm">
+                    <a href="#">Carrers</a>
+                    <a href="#">Support</a>
+                    <a href="#">Privacy Policy</a>
+                </div>
+            </div>
+            <div class="footer__btn text-sm">
+                <a href="#" class="button">Request Invite</a>
+                <div class="copyright"> © Easybank. All Rights Reserved</div>
+            </div>
         </div>
     </footer>
     <script src="index.js"></script>
