--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
                 <a href="#" class="article__item">
                     <img class="article__image" src="/images/image-restaurant.jpg" alt="img">
                     <div class="article__text">
-                        <div class="article__author text-xs">By Claire Robinson</div>
-                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
-                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
-                            why should you be forced to only receive money in a single …
+                        <div class="article__author text-xs">By Wilson Hutton</div>
+                        <h3 class="article__title text-lg"> Treat yourself without worrying about money</h3>
+                        <p class="text-sm"> Our simple budgeting feature allows you to separate out your
+                            spending and set realistic limits each month. That means you …
                         </p>
                     </div>
                 </a>
@@ -129,9 +129,9 @@
                     <img class="article__image" src="/images/image-plane.jpg" alt="img">
                     <div class="article__text">
                         <div class="article__author text-xs">By Claire Robinson</div>
-                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
-                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
-                            why should you be forced to only receive money in a single …
+                        <h3 class="article__title text-lg"> Take your Easybank card wherever you go</h3>
+                        <p class="text-sm"> We want you to enjoy your travels. This is why we don’t charge
+                            any fees on purchases while you’re abroad. We’ll even show you …
                         </p>
                     </div>
                 </a>
@@ -139,9 +139,10 @@
                     <img class="article__image" src="/images/image-confetti.jpg" alt="img">
                     <div class="article__text">
                         <div class="article__author text-xs">By Claire Robinson</div>
-                        <h3 class="article__title text-lg"> Receive money in any currency with no fees</h3>
-                        <p class="text-sm"> The world is getting smaller and we’re becoming more mobile. So
-                            why should you be forced to only receive money in a single …
+                        <h3 class="article__title text-lg"> Our invite-only Beta accounts are now live!</h3>
+                        <p class="text-sm"> After a lot of hard work by the whole team, we’re excited to
+                            launch our closed beta. It’s easy to request an invite through
+                            the site …
                         </p>
                     </div>
                 </a>
